# domain-exploration

./: .pre-commit-config.yaml  README.md  optuna_testing.py  pyproject.toml  ruff.toml
domain/: cli.py  main.py  tuning.py
domain/data/: data_modules.py  transforms.py  tuning.py
domain/model/: hyperparameter_tuning.py  lit_modules.py  modules.py  practice.py
lightning_logs/version_0/: events.out.tfevents.1717108635.rileys-mbp.lan.76321.0
lightning_logs/version_1/: events.out.tfevents.1717108677.rileys-mbp.lan.76321.1
lightning_logs/version_10/: events.out.tfevents.1717112339.rileys-mbp.lan.80265.1
lightning_logs/version_11/: events.out.tfevents.1717112444.rileys-mbp.lan.80408.0
lightning_logs/version_12/: events.out.tfevents.1717113696.rileys-mbp.lan.80922.0
lightning_logs/version_13/: events.out.tfevents.1717113897.rileys-mbp.lan.81242.0
lightning_logs/version_14/: events.out.tfevents.1717113961.rileys-mbp.lan.81280.0
lightning_logs/version_15/: events.out.tfevents.1717115145.rileys-mbp.lan.81569.0
lightning_logs/version_16/: events.out.tfevents.1717115257.rileys-mbp.lan.81603.0
lightning_logs/version_17/: events.out.tfevents.1717115610.rileys-mbp.lan.82194.0
lightning_logs/version_18/: events.out.tfevents.1717115627.rileys-mbp.lan.82274.0
lightning_logs/version_19/: events.out.tfevents.1717115682.rileys-mbp.lan.82352.0
lightning_logs/version_2/: events.out.tfevents.1717109483.rileys-mbp.lan.76976.0
lightning_logs/version_3/: events.out.tfevents.1717109519.rileys-mbp.lan.76976.1
notebooks/: domain.ipynb
(+6 files in other folders)
