[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "domain"
version = "0.0.1"
dependencies = [
    "torch",
    "torchmetrics",
    "torchvision",
    "lightning[pytorch-extra]==2.1.3",
    "einops"
]

[tool.setuptools]
py-modules = ["domain"]

[project.scripts]
domain = "domain.main:cli_main"